typo, no landshark in accplcy

--- a/config/access-policy.cfg
+++ b/config/access-policy.cfg
@@ -13,7 +13,7 @@ ocu = 130.107.95.92 130.107.95.25 130.107.95.89
 range = 19001-20000
 
 [Monitor]
-topic = /chatter /landshark_control/base_velocity/hmac /landshark_control/turret_joint_velocity/hmac /landshark_control/moog_joint_velocity/hmac /landshark_control/trigger/hmac /landshark_control/deadman/hmac /rosout /landshark/gps/hmac /landshark/imu/hmac /landshark/battery_level/hmac /landshark/front_camera/compressed /landshark/rear_camera/compressed /landshark/moog_right_camera/compressed /landshark/gun_camera/compressed /landshark_spoofing/status/hmac /landshark/upenn_controller_state/status/hmac 
+topic = /chatter 
 
 [Nodes]
 default=localhost
@@ -27,67 +27,24 @@ default=localhost
 /gps_spoofer=localhost
 /gps_velocity_spoofer=localhost
 /imu_spoofer=localhost
-/landshark/robot_state_publisher=localhost
-/landshark_base=localhost
-/landshark_computer_monitor_node=localhost
-/landshark_gps=localhost
-/landshark_imu_node=localhost
-/landshark_moog_ptz=localhost
-/landshark_odom_ref_pub=localhost
-/landshark_paintball=localhost
-/landshark_radar=localhost
-/landshark_turret=localhost
-/landshark_video=localhost
-/landshark_waypoint_navigation=localhost
 /odom_aligned=localhost
 /odom_ref_pub=localhost
 /odometry_spoofer=localhost
 /rosout=localhost
 /wheel_encoder_spoofer=localhost
 /rosout__monitor__=localhost
-/landshark/gps__monitor__=localhost
-/landshark/imu__monitor__=localhost
-/landshark/joint_states__monitor__=localhost
-/landshark_control/trigger__monitor__=localhost
 /ankh/joystick_teleop=ocu
 /Ocu_2D=localhost ocu
 
 [Publishers]
 default=localhost certikos
 /chatter = localhost ocu
-/landshark_control/base_velocity/hmac = localhost certikos ocu
-/landshark_control/turret_joint_velocity/hmac = localhost certikos ocu
-/landshark_control/moog_joint_velocity/hmac = localhost certikos ocu
-/landshark_control/trigger/hmac = localhost certikos ocu
-/landshark_control/deadman/hmac = localhost certikos ocu
 /rosout = localhost certikos ocu
 /diagnostics = localhost certikos ocu
-/landshark_waypoint_navigation/ocu_goal/hmac = localhost certikos ocu
-/landshark/upenn_controller_state/control/hmac = localhost certikos ocu
-/landshark_demo/desired_speed/hmac = localhost certikos ocu
-/landshark_demo/kp/hmac = localhost certikos ocu
-/landshark_demo/ki/hmac = localhost certikos ocu
-/landshark_demo/trim/hmac = localhost certikos ocu
-/landshark/imu_spoof_control/hmac = localhost certikos ocu
-/landshark/odom_spoof_control/hmac = localhost certikos ocu
-/landshark/gps_velocity_spoof_control/hmac = localhost certikos ocu
-/landshark/gps_spoof_control/hmac = localhost certikos ocu
-/landshark/wheel_encoder_spoof_control/hmac = localhost certikos ocu
 
 [Subscribers]
 default = localhost certikos 
 /chatter = localhost ocu
-/landshark/battery_level = localhost certikos ocu
-/landshark/imu = localhost certikos ocu
-/landshark/gps = localhost certikos ocu
-/landshark/rear_camera/compressed = localhost certikos ocu
-/landshark/front_camera/compressed = localhost certikos ocu
-/landshark/gun_camera/compressed = localhost certikos ocu
-/landshark/moog_right_camera/compressed = localhost certikos ocu
-/landshark/moog_left_camera/compressed = localhost certikos ocu
-#/landshark_waypoint_navigation = localhost certikos ocu
-/landshark_spoofing/status = localhost certikos ocu
-/landshark/upenn_controller_state/status = localhost certikos ocu
 
 [Commands]
 default = localhost
